--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "examine",
   "version": "1.0.0",
-  "description": "天津出入境检验",
+  "description": "a project",
   "author": "cassie",
   "private": true,
   "scripts": {
